[package]
name = "piksell"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
naga = "0.13.0"
raw-window-handle = "0.5.2"
wgpu = { version = "0.17.1", features = ["naga"] }

[features]
default = []
webgl = ["wgpu/webgl"]
glsl = ["wgpu/glsl"]
spirv = ["wgpu/spirv"]
vulkan = ["wgpu/wgc"]
serde = ["wgpu/serde"]
