[package]
name = "piksellar"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.17.0", features = ["naga"] }

[features]
default = []
webgl = ["wgpu/webgl"]
glsl = ["wgpu/glsl"]
spirv = ["wgpu/spirv"]
vulkan = ["wgpu/wgc"]
serde = ["wgpu/serde"]