[package]
name = "piksellar_derive"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
