[package]
name = "native"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
winit = "0.28.6"
winit_input_helper = "0.14.1"
piksellar = {path = "../../piksellar"}